--- a/mi/index.html
+++ b/mi/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="小米商城直营小米公司旗下所有产品，囊括小米手机系列小米MIX 3、小米8、小米Note 3，红米手机系列红米5 Plus、红米6 Pro，智能硬件，配件及小米生活周边，同时提供小米客户服务及售后支持。" />
 	<meta name="keywords" content="小米,小米8,小米Note3,红米5Plus,小米MIX3,小米商城" />
 	<title>仿小米首页</title>
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="imagesjrx/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/common.css">
@@ -101,25 +101,25 @@
 			<div class="banner">
 				<div class="cate">
 					<ul>
-						<li class="cate-item">手机 电话卡<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">电视 盒子<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">笔记本 平板<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">家电 插线板<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">出行 穿戴<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">智能 路由器<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">电源 配件<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">健康 儿童<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">耳机 音箱<i class="iconfont">&#xe623;</i></li>
-						<li class="cate-item">生活 箱包<i class="iconfont">&#xe623;</i></li>
+						<li class="cate-item"><a href="#">手机 电话卡<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">电视 盒子<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">笔记本 平板<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">家电 插线板<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">出行 穿戴<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">智能 路由器<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">电源 配件<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="ertongzsc.html">健康 儿童<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">耳机 音箱<i class="iconfont">&#xe623;</i></a></li>
+						<li class="cate-item"><a href="#">生活 箱包<i class="iconfont">&#xe623;</i></a></li>
 					</ul>
 				</div>
 				<div class="carousel">
 					<ul class="carousel-imgs">
-						<li class="carousel-imgs-item"><img src="images/b1.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="images/b2.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="images/b3.jpg" alt=""></li>
-						<!-- <li class="carousel-imgs-item"><img src="images/b2.jpg" alt=""></li>
-						<li class="carousel-imgs-item"><img src="images/b1.jpg" alt=""></li> -->
+						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li>
+						<li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
+						<li class="carousel-imgs-item"><img src="imagesjrx/b3.jpg" alt=""></li>
+						<!-- <li class="carousel-imgs-item"><img src="imagesjrx/b2.jpg" alt=""></li>
+						<li class="carousel-imgs-item"><img src="imagesjrx/b1.jpg" alt=""></li> -->
 					</ul>
 					<span class="arrow left-arrow iconfont">&#xe627;</span>
 					<span class="arrow right-arrow iconfont">&#xe622;</span>
@@ -143,9 +143,9 @@
 				</div>
 				<div class="col2">
 					<ul class="hot-promo">
-						<li class="hot-promo-item"><img src="images/ad1.jpg" alt="" class="hot-promo-item"></li>
-						<li class="hot-promo-item"><img src="images/ad2.jpg" alt="" class="hot-promo-item"></li>
-						<li class="hot-promo-item"><img src="images/ad3.jpg" alt="" class="hot-promo-item"></li>
+						<li class="hot-promo-item"><img src="imagesjrx/ad1.jpg" alt="" class="hot-promo-item"></li>
+						<li class="hot-promo-item"><img src="imagesjrx/ad2.jpg" alt="" class="hot-promo-item"></li>
+						<li class="hot-promo-item"><img src="imagesjrx/ad3.jpg" alt="" class="hot-promo-item"></li>
 					</ul>
 				</div>
 			</div>
@@ -160,7 +160,7 @@
 				<div class="bd clearfix">
 					<div class="col1 timer">
 						<p class="timer-name">22:00 场</p>
-						<img  class="timer-img" src="images/flash.png" alt="">
+						<img  class="timer-img" src="imagesjrx/flash.png" alt="">
 						<p class="timer-desc">距离开始还要</p>
 						<div class="timer-box">
 							<span class="timer-num">00</span>
@@ -173,11 +173,11 @@
 					<div class="col2">
 						<ul class="phone-product"">
 							<li class="product-item">
-								<a href="#">
+								<a href="../flash/flash.html">
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -188,11 +188,11 @@
 								</div>
 							</li>
 							<li class="product-item">
-								<a href="#">
+								<a href="../flash/flash.html">
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -202,11 +202,11 @@
 								</div>
 							</li>
 							<li class="product-item">
-								<a href="#">
+								<a href="../flash/flash.html">
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -216,11 +216,11 @@
 								</div>
 							</li>
 							<li class="product-item">
-								<a href="#">
+								<a href="../flash/flash.html">
 									<div class="bg"></div>
 								</a>
 								<div class="content">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑bbbbbbbbbb</h3>
 									<p class="product-desc">Unibody 全陶瓷</p>
 									<p class="product-price">
@@ -235,7 +235,7 @@
 			</div>
 			<div class="ad">
 				<a href="#">
-					<img src="images/long_ad1.jpg" alt="" class="ad-img">
+					<img src="imagesjrx/long_ad1.jpg" alt="" class="ad-img">
 				</a>	
 			</div>
 		</div>
@@ -253,13 +253,13 @@
 				</div>
 				<div class="bd clearfix">
 					<div class="col1">
-						<a href="#"><img src="images/phont-left.png" alt=""></a>
+						<a href="#"><img src="imagesjrx/phont-left.png" alt=""></a>
 					</div>
 					<div class="col2">
 						<ul>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -273,7 +273,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -287,7 +287,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -300,7 +300,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -313,7 +313,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -326,7 +326,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -339,7 +339,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -352,7 +352,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<a href="#">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
@@ -369,7 +369,7 @@
 			</div>
 			<div class="ad">
 				<a href="#">
-					<img src="images/long_ad1.jpg" alt="" class="ad-img">
+					<img src="imagesjrx/long_ad1.jpg" alt="" class="ad-img">
 				</a>	
 			</div>
 			<div class="elec">
@@ -387,17 +387,17 @@
 				<div class="bd clearfix">
 					<div class="col1">
 						<li class="product-item product-item-m">
-							<a href="#"><img src="images/e1.png" alt=""></a>
+							<a href="#"><img src="imagesjrx/e1.png" alt=""></a>
 						</li>		
 						<li class="product-item product-item-m">
-							<a href="#"><img src="images/e2.png" alt=""></a>
+							<a href="#"><img src="imagesjrx/e2.png" alt=""></a>
 						</li>			
 					</div>
 					<div class="col2">
 						<ul class="elec-product">
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -416,7 +416,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -427,7 +427,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -438,7 +438,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -449,7 +449,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -460,7 +460,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -471,7 +471,7 @@
 							</li>
 							<li class="product-item product-item-m">
 								<a href="#">
-									<img src="images/p1.jpg" alt="" class="product-img">
+									<img src="imagesjrx/p1.jpg" alt="" class="product-img">
 								</a>
 								<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								<p class="product-desc">Unibody 全陶瓷</p>
@@ -481,10 +481,10 @@
 								</p>
 							</li>
 							<li class="product-item product-item-min">
-								<a href="#">
-									<img src="images/ca.png" alt="" class="product-img">
+								<a href="../mi-band/mi-band.html">
+									<img src="imagesjrx/ca.png" alt="" class="product-img">
 								</a>
-								<a href="#">
+								<a href="../mi-band/mi-band.html">
 									<h3 class="product-name">小米MX2 8GB+128GB 黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑黑</h3>
 								</a>
 								<p class="product-price">
@@ -503,7 +503,7 @@
 			</div>
 			<div class="ad">
 				<a href="#">
-					<img src="images/long_ad1.jpg" alt="" class="ad-img">
+					<img src="imagesjrx/long_ad1.jpg" alt="" class="ad-img">
 				</a>
 			</div>
 			<div class="video">
@@ -520,7 +520,7 @@
 						<li class="video-item">
 							<div class="figure">
 								<a href="#">
-									<img src="images/lj.png" alt="">
+									<img src="imagesjrx/lj.png" alt="">
 									<span class="play">
 										<i class="iconfont">&#xe601;</i>
 									</span>
@@ -537,7 +537,7 @@
 						<li class="video-item">
 							<div class="figure">
 								<a href="#">
-									<img src="images/lj.png" alt="">
+									<img src="imagesjrx/lj.png" alt="">
 									<span class="play">
 										<i class="iconfont">&#xe601;</i>
 									</span>
@@ -553,7 +553,7 @@
 						<li class="video-item">
 							<div class="figure">
 								<a href="#">
-									<img src="images/lj.png" alt="">
+									<img src="imagesjrx/lj.png" alt="">
 									<span class="play">
 										<i class="iconfont">&#xe601;</i>
 									</span>
@@ -569,7 +569,7 @@
 						<li class="video-item">
 							<div class="figure">
 								<a href="#">
-									<img src="images/lj.png" alt="">
+									<img src="imagesjrx/lj.png" alt="">
 									<span class="play">
 										<i class="iconfont">&#xe601;</i>
 									</span>
@@ -631,16 +631,16 @@
 					<dd><a href="#">订单操作</a></dd>
 				</dl>
 				<dl class="link-item">
-					<dt>帮助中心</dt>
-					<dd><a href="#">账户管理</a></dd>
-					<dd><a href="#">购物指南</a></dd>
-					<dd><a href="#">订单操作</a></dd>
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="fuwuzsc.html">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
 				</dl>
 				<dl class="link-item">
-					<dt>帮助中心</dt>
-					<dd><a href="#">账户管理</a></dd>
-					<dd><a href="#">购物指南</a></dd>
-					<dd><a href="#">订单操作</a></dd>
+					<dt>线下门店</dt>
+					<dd><a href="#">小米之家</a></dd>
+					<dd><a href="#">服务网点</a></dd>
+					<dd><a href="#">授权体验店</a></dd>
 				</dl>
 				<dl class="link-item">
 					<dt>帮助中心</dt>
@@ -679,25 +679,33 @@
 					<p class="nav-link">
 						<a href="#">小米商城</a>
 						<span class="sep"></span>
-						<a href="#">小米商城</a>
-						<span class="sep"></span>
-						<a href="#">小米商城</a>
-						<span class="sep"></span>
-						<a href="#">小米商城</a>
-						<span class="sep"></span>
 						<a href="#">MIUI</a>
+						<span class="sep"></span>
+						<a href="#">米家</a>
+						<span class="sep"></span>
+						<a href="#">米聊</a>
+						<span class="sep"></span>
+						<a href="#">多看</a>
 						<span class="sep"></span>
 						<a href="#">路由器</a>
 						<span class="sep"></span>
+						<a href="#">游戏</a>
+						<span class="sep"></span>
 						<a href="#">米粉卡</a>
+						<span class="sep"></span>
+						<a href="#">政企服务</a>
 						<span class="sep"></span>
 						<a href="#">小米天猫店</a>
 						<span class="sep"></span>
-						<a href="#">小米商城</a>
+						<a href="#">小米天猫店</a>
 						<span class="sep"></span>
-						<a href="#">小米商城</a>
+						<a href="#">隐私政策</a>
 						<span class="sep"></span>
-						<a href="#">小米商城</a>
+						<a href="#">问题反馈</a>
+						<span class="sep"></span>
+						<a href="#">廉政举报</a>
+						<span class="sep"></span>
+						<a href="#">Select Region</a>
 					</p>
 					<p class="icp">
 						<a href="#">京网文[2017]1530-131号 </a>
@@ -709,19 +717,19 @@
 				</div>
 				<div class="links">
 					<a href="#">
-						<img src="images/truste.png" alt="">
+						<img src="imagesjrx/truste.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-1.png" alt="">
+						<img src="imagesjrx/v-logo-1.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-2.png" alt="">
+						<img src="imagesjrx/v-logo-2.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-3.png" alt="">
+						<img src="imagesjrx/v-logo-3.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-4.png" alt="">
+						<img src="imagesjrx/v-logo-4.png" alt="">
 					</a>			
 				</div>
 			</div>
