--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -6,7 +6,7 @@
 	<title>小米帮助中心-小米商城</title>
 	<meta name="description" content="小米官方网站在线提供服务支持，帮您解答有关小米产品的一切问题，了解小米最新动态，购物流程，物流信息 ，售后服务等服务。">
 	<meta name="keywords" content="小米，小米手机，小米官网，小米服务，小米商城">
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="imagesjrx/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/common.css">
@@ -115,10 +115,10 @@
 			<div class="carousel">
 				<div class="viewport">
 					<div class="index-header">
-						<a href="#" class="sider"><img src="images/c1.jpg" alt=""></a>
-						<a href="#" class="sider"><img src="images/c2.jpg" alt=""></a>
-						<a href="#" class="sider"><img src="images/c1.jpg" alt=""></a>
-						<a href="#" class="sider"><img src="images/c2.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="imagesjrx/c1.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="imagesjrx/c2.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="imagesjrx/c1.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="imagesjrx/c2.jpg" alt=""></a>
 					</div>
 				</div>
 				<div class="controls">
@@ -134,56 +134,56 @@
 					<ul>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon1.png" alt="">
+								<img src="imagesjrx/selfservice_icon1.png" alt="">
 								<h3>申请售后服务</h3>
 								<span>一键预约，快速维修</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon2.png" alt="">
+								<img src="imagesjrx/selfservice_icon2.png" alt="">
 								<h3>订单查询</h3>
 								<span>购物信息，快速查询</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon3.png" alt="">
+								<img src="imagesjrx/selfservice_icon3.png" alt="">
 								<h3>小米账户</h3>
 								<span>重置密保，安全验证</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon4.png" alt="">
+								<img src="imagesjrx/selfservice_icon4.png" alt="">
 								<h3>保障服务</h3>
 								<span>碎屏延保，双重保障</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon5.png" alt="">
+								<img src="imagesjrx/selfservice_icon5.png" alt="">
 								<h3>以旧换新</h3>
 								<span>便捷交易，价格保障</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon6.png" alt="">
+								<img src="imagesjrx/selfservice_icon6.png" alt="">
 								<h3>付费服务</h3>
 								<span>安装服务，手机维修</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon7.png" alt="">
+								<img src="imagesjrx/selfservice_icon7.png" alt="">
 								<h3>售后政策</h3>
 								<span>条款说明，安心保障</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/selfservice_icon8.png" alt="">
+								<img src="imagesjrx/selfservice_icon8.png" alt="">
 								<h3>查询真伪</h3>
 								<span>便被真伪，放心使用</span>
 							</a>
@@ -197,49 +197,49 @@
 					<ul>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/ph1.jpg" alt="">
+								<img src="imagesjrx/ph1.jpg" alt="">
 								<span>小米手机</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/ph2.jpg" alt="">
+								<img src="imagesjrx/ph2.jpg" alt="">
 								<span>红米手机</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/ph3.jpg" alt="">
+								<img src="imagesjrx/ph3.jpg" alt="">
 								<span>小米平板</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/el3.jpg" alt="">
+								<img src="imagesjrx/el3.jpg" alt="">
 								<span>小米电视</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/ph1.jpg" alt="">
+								<img src="imagesjrx/ph1.jpg" alt="">
 								<span>小米手机</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/ph2.jpg" alt="">
+								<img src="imagesjrx/ph2.jpg" alt="">
 								<span>红米手机</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/ph3.jpg" alt="">
+								<img src="imagesjrx/ph3.jpg" alt="">
 								<span>小米平板</span>
 							</a>
 						</li>
 						<li class="transi-up">
 							<a href="#">
-								<img src="images/el3.jpg" alt="">
+								<img src="imagesjrx/el3.jpg" alt="">
 								<span>小米电视</span>
 							</a>
 						</li>
@@ -249,30 +249,30 @@
 			<div class="index-center clearfix">
 				<h2 class="webfont">服务中心</h2>
 				<div class="left">
-					<img src="images/serviceCenter_img.jpg" alt="">
+					<img src="imagesjrx/serviceCenter_img.jpg" alt="">
 				</div>
 				<div class="right">
 					<p>售后网点</p>
 					<span>小米售后，一站式为您提供售后服务。有售后，放心购是我们的服务宗旨。</span>
 					<div class="icon-wrap clearfix">
 						<dl>
-							<dd><img src="images/serviceCenter_icon1.png" alt=""></dd>
+							<dd><img src="imagesjrx/serviceCenter_icon1.png" alt=""></dd>
 							<dt>预约服务</dt>
 						</dl>
 						<dl>
-							<dd><img src="images/serviceCenter_icon2.png" alt=""></dd>
+							<dd><img src="imagesjrx/serviceCenter_icon2.png" alt=""></dd>
 							<dt>1小时快修</dt>
 						</dl>
 						<dl>
-							<dd><img src="images/serviceCenter_icon3.png" alt=""></dd>
+							<dd><img src="imagesjrx/serviceCenter_icon3.png" alt=""></dd>
 							<dt>软件升级</dt>
 						</dl>
 						<dl>
-							<dd><img src="images/serviceCenter_icon4.png" alt=""></dd>
+							<dd><img src="imagesjrx/serviceCenter_icon4.png" alt=""></dd>
 							<dt>咨询体验</dt>
 						</dl>
 						<dl>
-							<dd><img src="images/serviceCenter_icon5.png" alt=""></dd>
+							<dd><img src="imagesjrx/serviceCenter_icon5.png" alt=""></dd>
 							<dt>面对面拆机</dt>
 						</dl>
 					</div>
@@ -318,7 +318,7 @@
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
-									<img src="images/contact_icon1.png" alt="">
+									<img src="imagesjrx/contact_icon1.png" alt="">
 									<span>7x24在线客服</span>
 								</p>
 							</a>
@@ -326,7 +326,7 @@
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
-									<img src="images/contact_icon2.png" alt="">
+									<img src="imagesjrx/contact_icon2.png" alt="">
 									<span>商城官方微博</span>
 								</p>
 							</a>
@@ -334,7 +334,7 @@
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
-									<img src="images/contact_icon3.png" alt="">
+									<img src="imagesjrx/contact_icon3.png" alt="">
 									<span>商城官方微信</span>
 								</p>
 							</a>
@@ -342,7 +342,7 @@
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
-									<img src="images/contact_icon4.png" alt="">
+									<img src="imagesjrx/contact_icon4.png" alt="">
 									<span class="two-line">
 										小米商城热线
 										<br>
@@ -355,7 +355,7 @@
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
-									<img src="images/contact_icon5.png" alt="">
+									<img src="imagesjrx/contact_icon5.png" alt="">
 									<span class="two-line">
 										小米金服热线
 										<br>
@@ -368,7 +368,7 @@
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
-									<img src="images/contact_icon6.png" alt="">
+									<img src="imagesjrx/contact_icon6.png" alt="">
 									<span class="two-line">
 										小米移动热线
 										<br>
@@ -427,31 +427,31 @@
 					<dd><a href="#">订单操作</a></dd>
 				</dl>
 				<dl class="link-item">
-					<dt>帮助中心</dt>
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="#">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>线下门店</dt>
+					<dd><a href="#">小米之家</a></dd>
+					<dd><a href="#">服务网点</a></dd>
+					<dd><a href="#">授权体验店</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>关于小米</dt>
 					<dd><a href="#">账户管理</a></dd>
 					<dd><a href="#">购物指南</a></dd>
 					<dd><a href="#">订单操作</a></dd>
 				</dl>
 				<dl class="link-item">
-					<dt>帮助中心</dt>
+					<dt>关注我们</dt>
 					<dd><a href="#">账户管理</a></dd>
 					<dd><a href="#">购物指南</a></dd>
 					<dd><a href="#">订单操作</a></dd>
 				</dl>
 				<dl class="link-item">
-					<dt>帮助中心</dt>
-					<dd><a href="#">账户管理</a></dd>
-					<dd><a href="#">购物指南</a></dd>
-					<dd><a href="#">订单操作</a></dd>
-				</dl>
-				<dl class="link-item">
-					<dt>帮助中心</dt>
-					<dd><a href="#">账户管理</a></dd>
-					<dd><a href="#">购物指南</a></dd>
-					<dd><a href="#">订单操作</a></dd>
-				</dl>
-				<dl class="link-item">
-					<dt>帮助中心</dt>
+					<dt>特色服务</dt>
 					<dd><a href="#">账户管理</a></dd>
 					<dd><a href="#">购物指南</a></dd>
 					<dd><a href="#">订单操作</a></dd>
@@ -519,19 +519,19 @@
 				</div>
 				<div class="links">
 					<a href="#">
-						<img src="images/truste.png" alt="">
+						<img src="imagesjrx/truste.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-1.png" alt="">
+						<img src="imagesjrx/v-logo-1.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-2.png" alt="">
+						<img src="imagesjrx/v-logo-2.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-3.png" alt="">
+						<img src="imagesjrx/v-logo-3.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-4.png" alt="">
+						<img src="imagesjrx/v-logo-4.png" alt="">
 					</a>			
 				</div>
 			</div>
