--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="description">
 	<meta name="keywords" content="keywords">
 	<title>小米企业团购</title>
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="imagesjrx/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/common.css">
@@ -79,12 +79,12 @@
 		<div class="container">
 			<div class="banner">
 				<a href="#">
-					<img src="images/b.jpg" alt="">
+					<img src="imagesjrx/b.jpg" alt="">
 				</a>
 				<div class="sider">
 					<div class="sider-top">
 						<div class="face">
-							<img src="images/icon_face.png" alt="">
+							<img src="imagesjrx/icon_face.png" alt="">
 						</div>
 						<div class="profile">
 							<h2 class="wenzi">你好，欢迎回来</h2>
@@ -130,16 +130,16 @@
 			<div class="hot">
 				<ul class="hot-list clearfix">
 					<li>
-						<a href="#"><img src="images/ad1.jpg" alt=""></a>
+						<a href="#"><img src="imagesjrx/ad1.jpg" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="images/ad2.jpg" alt=""></a>
+						<a href="#"><img src="imagesjrx/ad2.jpg" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="images/ad3.jpg" alt=""></a>
+						<a href="#"><img src="imagesjrx/ad3.jpg" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="images/ad4.jpg" alt=""></a>
+						<a href="#"><img src="imagesjrx/ad4.jpg" alt=""></a>
 					</li>
 				</ul>
 			</div>
@@ -160,7 +160,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/ph1.jpg" alt="">
+								<img src="imagesjrx/ph1.jpg" alt="">
 							</a>
 							<h3 class="title">小米8 全网通版 6GB+256GB</h3>
 							<p class="desc">小米8 全网通版 6GB内存 256GB</p>
@@ -168,7 +168,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/ph2.jpg" alt="">
+								<img src="imagesjrx/ph2.jpg" alt="">
 							</a>
 							<h3 class="title">小米平板4 Plus 10英寸 LTE版 </h3>
 							<p class="desc">小米平板4 Plus 10英寸 LTE版 </p>
@@ -176,7 +176,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/ph3.jpg" alt="">
+								<img src="imagesjrx/ph3.jpg" alt="">
 							</a>
 							<h3 class="title">小米MIX 3</h3>
 							<p class="desc">小米MIX 3</p>
@@ -184,7 +184,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/ph4.jpg" alt="">
+								<img src="imagesjrx/ph4.jpg" alt="">
 							</a>
 							<h3 class="title">小米8 SE 全网通版 6GB+128GB</h3>
 							<p class="desc">小米8 SE 全网通版 6GB内存 128GB</p>
@@ -192,7 +192,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/ph5.jpg" alt="">
+								<img src="imagesjrx/ph5.jpg" alt="">
 							</a>
 							<h3 class="title">小米平板4</h3>
 							<p class="desc">小米平板4 8英寸WIFI版 4GB内存</p>
@@ -214,7 +214,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/el1.jpg" alt="">
+								<img src="imagesjrx/el1.jpg" alt="">
 							</a>
 							<h3 class="title">小米电视4 75英寸</h3>
 							<p class="desc">小米电视4 75英寸</p>
@@ -222,7 +222,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/el2.jpg" alt="">
+								<img src="imagesjrx/el2.jpg" alt="">
 							</a>
 							<h3 class="title">小米电视4A 40英寸</h3>
 							<p class="desc">小米电视4A 40英寸</p>
@@ -230,7 +230,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/el3.jpg" alt="">
+								<img src="imagesjrx/el3.jpg" alt="">
 							</a>
 							<h3 class="title">小米电视4X 43英寸</h3>
 							<p class="desc">小米电视4X 43英寸</p>
@@ -238,7 +238,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/el4.png" alt="">
+								<img src="imagesjrx/el4.png" alt="">
 							</a>
 							<h3 class="title">小米电视4 65英寸全面屏旗舰版</h3>
 							<p class="desc">小米电视4 65英寸全面屏旗舰版</p>
@@ -246,7 +246,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/el5.jpg" alt="">
+								<img src="imagesjrx/el5.jpg" alt="">
 							</a>
 							<h3 class="title">小米电视4S 65英寸 PRO</h3>
 							<p class="desc">小米电视4S 65英寸 PRO</p>
@@ -268,7 +268,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/luyouqi.jpg" alt="">
+								<img src="imagesjrx/luyouqi.jpg" alt="">
 							</a>
 							<h3 class="title">小米路由器4Q</h3>
 							<p class="desc">小米路由器4Q</p>
@@ -276,7 +276,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/luyouqi.jpg" alt="">
+								<img src="imagesjrx/luyouqi.jpg" alt="">
 							</a>
 							<h3 class="title">小米路由器4Q</h3>
 							<p class="desc">小米路由器4Q</p>
@@ -284,7 +284,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/luyouqi.jpg" alt="">
+								<img src="imagesjrx/luyouqi.jpg" alt="">
 							</a>
 							<h3 class="title">小米路由器4Q</h3>
 							<p class="desc">小米路由器4Q</p>
@@ -292,7 +292,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/luyouqi.jpg" alt="">
+								<img src="imagesjrx/luyouqi.jpg" alt="">
 							</a>
 							<h3 class="title">小米路由器4Q</h3>
 							<p class="desc">小米路由器4Q</p>
@@ -300,7 +300,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/luyouqi.jpg" alt="">
+								<img src="imagesjrx/luyouqi.jpg" alt="">
 							</a>
 							<h3 class="title">小米路由器4Q</h3>
 							<p class="desc">小米路由器4Q</p>
@@ -322,7 +322,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/zhineng.png" alt="">
+								<img src="imagesjrx/zhineng.png" alt="">
 							</a>
 							<h3 class="title">小米VR一体机 白色</h3>
 							<p class="desc">小米VR一体机 白色</p>
@@ -330,7 +330,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/zhineng.png" alt="">
+								<img src="imagesjrx/zhineng.png" alt="">
 							</a>
 							<h3 class="title">小米VR一体机 白色</h3>
 							<p class="desc">小米VR一体机 白色</p>
@@ -338,7 +338,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/zhineng.png" alt="">
+								<img src="imagesjrx/zhineng.png" alt="">
 							</a>
 							<h3 class="title">小米VR一体机 白色</h3>
 							<p class="desc">小米VR一体机 白色</p>
@@ -346,7 +346,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/zhineng.png" alt="">
+								<img src="imagesjrx/zhineng.png" alt="">
 							</a>
 							<h3 class="title">小米VR一体机 白色</h3>
 							<p class="desc">小米VR一体机 白色</p>
@@ -354,7 +354,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/zhineng.png" alt="">
+								<img src="imagesjrx/zhineng.png" alt="">
 							</a>
 							<h3 class="title">小米VR一体机 白色</h3>
 							<p class="desc">小米VR一体机 白色</p>
@@ -377,7 +377,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/erji.jpg" alt="">
+								<img src="imagesjrx/erji.jpg" alt="">
 							</a>
 							<h3 class="title">小米头戴式蓝牙耳机</h3>
 							<p class="desc">小米头戴式蓝牙耳机</p>
@@ -385,7 +385,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/erji.jpg" alt="">
+								<img src="imagesjrx/erji.jpg" alt="">
 							</a>
 							<h3 class="title">小米头戴式蓝牙耳机</h3>
 							<p class="desc">小米头戴式蓝牙耳机</p>
@@ -393,7 +393,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/erji.jpg" alt="">
+								<img src="imagesjrx/erji.jpg" alt="">
 							</a>
 							<h3 class="title">小米头戴式蓝牙耳机</h3>
 							<p class="desc">小米头戴式蓝牙耳机</p>
@@ -401,7 +401,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/erji.jpg" alt="">
+								<img src="imagesjrx/erji.jpg" alt="">
 							</a>
 							<h3 class="title">小米头戴式蓝牙耳机</h3>
 							<p class="desc">小米头戴式蓝牙耳机</p>
@@ -409,7 +409,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/erji.jpg" alt="">
+								<img src="imagesjrx/erji.jpg" alt="">
 							</a>
 							<h3 class="title">小米头戴式蓝牙耳机</h3>
 							<p class="desc">小米头戴式蓝牙耳机</p>
@@ -431,7 +431,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/peijian.jpg" alt="">
+								<img src="imagesjrx/peijian.jpg" alt="">
 							</a>
 							<h3 class="title">小米蓝牙电脑音箱</h3>
 							<p class="desc">小米蓝牙电脑音箱</p>
@@ -439,28 +439,28 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/peijian.jpg" alt="">
+								<img src="imagesjrx/peijian.jpg" alt="">
 							</a>
 							<h3 class="title">小米蓝牙电脑音箱</h3>
 							<p class="desc">小米蓝牙电脑音箱</p>
 							<a href="#" class="btn">登录企业账户开始采购</a>
 						</li><li>
 							<a href="#" class="thumb">
-								<img src="images/peijian.jpg" alt="">
+								<img src="imagesjrx/peijian.jpg" alt="">
 							</a>
 							<h3 class="title">小米蓝牙电脑音箱</h3>
 							<p class="desc">小米蓝牙电脑音箱</p>
 							<a href="#" class="btn">登录企业账户开始采购</a>
 						</li><li>
 							<a href="#" class="thumb">
-								<img src="images/peijian.jpg" alt="">
+								<img src="imagesjrx/peijian.jpg" alt="">
 							</a>
 							<h3 class="title">小米蓝牙电脑音箱</h3>
 							<p class="desc">小米蓝牙电脑音箱</p>
 							<a href="#" class="btn">登录企业账户开始采购</a>
 						</li><li>
 							<a href="#" class="thumb">
-								<img src="images/peijian.jpg" alt="">
+								<img src="imagesjrx/peijian.jpg" alt="">
 							</a>
 							<h3 class="title">小米蓝牙电脑音箱</h3>
 							<p class="desc">小米蓝牙电脑音箱</p>
@@ -477,7 +477,7 @@
 					<ul class="bd-list clearfix">
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/lipinka.jpg" alt="">
+								<img src="imagesjrx/lipinka.jpg" alt="">
 							</a>
 							<h3 class="title">小米礼品卡（电子卡）1000元</h3>
 							<p class="desc">电子卡无需寄运，即买即用</p>
@@ -485,7 +485,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/lipinka.jpg" alt="">
+								<img src="imagesjrx/lipinka.jpg" alt="">
 							</a>
 							<h3 class="title">小米礼品卡（电子卡）1000元</h3>
 							<p class="desc">电子卡无需寄运，即买即用</p>
@@ -493,7 +493,7 @@
 						</li>
 						<li>
 							<a href="#" class="thumb">
-								<img src="images/lipinka.jpg" alt="">
+								<img src="imagesjrx/lipinka.jpg" alt="">
 							</a>
 							<h3 class="title">小米礼品卡（电子卡）1000元</h3>
 							<p class="desc">电子卡无需寄运，即买即用</p>
@@ -601,19 +601,19 @@
 				</div>
 				<div class="links">
 					<a href="#">
-						<img src="images/truste.png" alt="">
+						<img src="imagesjrx/truste.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-1.png" alt="">
+						<img src="imagesjrx/v-logo-1.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-2.png" alt="">
+						<img src="imagesjrx/v-logo-2.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-3.png" alt="">
+						<img src="imagesjrx/v-logo-3.png" alt="">
 					</a>
 					<a href="#">
-						<img src="images/v-logo-4.png" alt="">
+						<img src="imagesjrx/v-logo-4.png" alt="">
 					</a>			
 				</div>
 			</div>
